--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,19 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+#  font_awesome_flutter: ^10.4.0
+#  badges: ^3.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  font_awesome_flutter: ^10.4.0
+  badges: ^3.0.3
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
