--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dev_dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.4.0
   badges: ^3.0.3
+  flutter_rating_bar: ^4.0.1
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
