--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dev_dependencies:
   font_awesome_flutter: ^10.4.0
   badges: ^3.0.3
   flutter_rating_bar: ^4.0.1
-
+  simple_animations: ^5.0.0+3
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
