--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
   badges: ^3.0.3
   flutter_rating_bar: ^4.0.1
   simple_animations: ^5.0.0+3
+  animations: ^2.0.7
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
