--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
   badges: ^3.0.3
   flutter_rating_bar: ^4.0.1
   flutter_bloc: ^8.1.3
+  provider: ^6.0.5
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
